--- a/views/user/orderedProduct.ejs
+++ b/views/user/orderedProduct.ejs
@@ -1,18 +1,6 @@
 <%- include('../partials/header')%>
 
-  <!-- breadcrumb-section -->
-  <div class="breadcrumb-section breadcrumb-bg">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 offset-lg-2 text-center">
-          <div class="breadcrumb-text">
 
-            <h1>Order details</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <!-- end breadcrumb section -->
 
 
@@ -20,26 +8,12 @@
   <div class="container">
     <div class="mb-100 mt-100">
 
-      <div class="d-flex justify-content-center">
-        <div class="bg-light" style="height: 170px;width: 400px;">
-
-          <div class=" d-flex justify-content-center">
-            <h6 class="text-decoration-underline">Delivery address for this order</h6>
-          </div>
-                <% let phone='Ph:' %>
-          <div class="ms-3">
-              <p><%=productData.name %>,<br><%=productData.address %>,<br><%=phone %> <%=productData.phonenumber %></p>
-          </div>
-
-        </div>
-      </div>
-
-      <table class="table table-success table-striped">
+      <table class="table  table-striped">
         <thead>
           <tr>
             <th scope="col">Image</th>
             <th scope="col">Product name</th>
-            <th scope="col">Category</th>
+            <th scope="col">Order Date</th>
             <th scope="col">Ordered quantity</th>
             <th scope="col">Price/kg</th>
             <th scope="col">Total</th>
@@ -52,13 +26,13 @@
               <td><img style="height: 60px; width: 60px;" src="/adminimages/<%= order.productDetail._id %>.jpg"
                   class="img-fluid" alt="" /></td>
               <td>
-                <%= order.productDetail.product_name %>
+                <%= order.productDetail.name %>
               </td>
               <td>
-                <%= order.category_name.category_name%>
+                <%= orderDetails[0].orderDate%>
               </td>
               <td>
-                <%= order.productQuantity %> kg
+                <%= order.productQuantity %>
               </td>
               <% var a=order.productQuantity%>
                 <% var b=order.productDetail.price%>
@@ -67,7 +41,7 @@
                       <%=order.productDetail.price%> ₹
                     </td>
                     <td>
-                      <%=c %> ₹ ( for <%= order.productQuantity%> kg )
+                      <%=c %> ₹
                     </td>
             </tr>
             <% }) %>
@@ -78,9 +52,152 @@
     </div>
   </div>
 
+  <% include ('../partials/header') %>  
+<style>
+    @media (min-width: 1025px) {
 
+}
 
-  <!--End Middle section -->
+.horizontal-timeline .items {
+border-top: 2px solid #ddd;
+}
 
-  <!-- footer -->
-  <%- include('../partials/footer')%>
+.horizontal-timeline .items .items-list {
+position: relative;
+margin-right: 0;
+}
+
+.horizontal-timeline .items .items-list:before {
+content: "";
+position: absolute;
+height: 8px;
+width: 8px;
+border-radius: 50%;
+background-color: #ddd;
+top: 0;
+margin-top: -5px;
+}
+
+.horizontal-timeline .items .items-list {
+padding-top: 15px;
+}
+  </style>
+  <section class="h-100 h-custom" style="background-color: #eee;">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-lg-8 col-xl-6">
+          <div class="card border-top border-bottom border-3" style="border-color: #94acdd !important;">
+            <div class="card-body p-5">
+  
+              <p class="lead fw-bold mb-5" style="color: #f37a27;">Order Details</p>
+  
+              <div class="row">
+                <div class="col mb-3">
+                  <p class="small text-muted mb-1">Delivery Date</p>
+                  <p><%= orderDetails[0].deliveryDate %></p>
+                </div>
+                <div class="col mb-3">
+                  <p class="small text-muted mb-1">Order No.</p>
+                  <p>012j1gvs356c</p>
+                </div>
+              </div>
+              <div>
+                <h6 class="text-decoration-underline">Delivery address for this order</h6>
+              </div>
+                    <% let phone='Ph:' %>
+              <div class="ms-3">
+                  <p><%=productData[0].name %>,<br><%=productData[0].address %>,<br><%=phone %> <%=orderDetails[0].phoneNumber%></p>
+              </div>
+              <% productData.forEach((order)=>{ %>
+              <div class="mx-n5 px-5 py-4" style="background-color: #f2f2f2;">
+                <div class="row">
+                  <div class="col-md-8 col-lg-9">
+                    <p><%= order.productDetail.name %> </p>
+                  </div>
+                  <div class="col-md-4 col-lg-3">
+                    <p><%= order.productDetail.price %>₹ *<%= order.productQuantity %> </p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-8 col-lg-9">
+                    <p class="mb-0">Shipping</p>
+                  </div>
+                  <div class="col-md-4 col-lg-3">
+                    <p class="mb-0">0₹</p>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="row my-4">
+                <div class="col-md-4 offset-md-8 col-lg-3 offset-lg-9">
+                  <% var a=order.productQuantity%>
+                <% var b=order.productDetail.price%>
+                  <% var c=a*b %>
+                  <p class="lead fw-bold mb-0" style="color: #f37a27;">
+                    <%=c %>₹
+                  </p>
+                </div>
+              </div>
+              <% }) %>
+              <p class="lead fw-bold mb-4 pb-2" style="color: #f37a27;">Tracking Order</p>
+  
+              <div class="row">
+                <div class="col-lg-12">
+                <% if (orderDetails[0].orderStatus==="cancelled") { %>
+                 
+                   
+                  <div class="horizontal-timeline">
+              
+                    <ul class="list-inline items d-flex justify-content-between">
+                      <li class="list-inline-item items-list">
+                        <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;"><%=orderDetails[0].orderStatus%></p
+                          class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
+                      </li>
+                      <li class="list-inline-item items-list">
+                     
+                      </li>
+                      <li class="list-inline-item items-list">
+                       
+                      </li>
+                      <li class="list-inline-item items-list text-end" >
+                        
+                      </li>
+                    </ul>
+  
+                  </div>
+                  <% } else { %>
+                    <div class="horizontal-timeline">
+              
+                      <ul class="list-inline items d-flex justify-content-between">
+                        <li class="list-inline-item items-list">
+                          <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;"><%=orderDetails[0].orderStatus%></p
+                            class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
+                        </li>
+                        <li class="list-inline-item items-list">
+                          <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">Shipped</p
+                            class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
+                        </li>
+                        <li class="list-inline-item items-list">
+                          <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">On the way
+                          </p>
+                        </li>
+                        <li class="list-inline-item items-list text-end" style="margin-right: 8px;">
+                          <p style="margin-right: -8px;">Delivered</p>
+                        </li>
+                      </ul>
+    
+                    </div>
+                  <% } %>
+                </div>
+              </div>
+  
+              <p class="mt-4 pt-2 mb-0">Want any help? <a href="/contact" style="color: #f37a27;">Please contact
+                  us</a></p>
+  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <%- include ('../partials/footer') %> 
