--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -13,176 +13,197 @@
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
 
 <body>
 
 
-    <div class="site-wrap">
-      <header class="site-navbar" role="banner">
-        <div class="site-navbar-top">
-          <div class="container">
-            <div class="row align-items-center">
+  <div class="site-wrap">
+    <header class="site-navbar" role="banner">
+      <div class="site-navbar-top">
+        <div class="container">
+          <div class="row align-items-center">
 
-              <div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
-                <form action="" class="site-block-top-search">
-                  <span class="icon icon-search2"></span>
-                  <input type="text" class="form-control border-0" placeholder="Search">
-                </form>
-              </div>
-
-              <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
-                <div class="site-logo">
-                  <a href="/index" class="js-logo-clone" style="text-decoration: none;">Wonder Shoes</a>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 order-3 order-md-3 text-right">
-                <div class="site-top-icons">
-                  <ul>
-
-                    <li><a href="/viewProfile" style="text-decoration: none;"><span class="icon icon-person"></li>
-                    <li><a href="#" style="text-decoration: none;"><span class="icon icon-heart-o"></a></li>
-                    <li>
-
-
-                      <a href="/viewCart" class="site-cart" style="text-decoration: none;">
-
-                        <span class="icon icon-shopping_cart"></span>
-                        <% if(locals.countInCart) {%>
-                          <span class="count">
-                            <%=countInCart%>
-                          </span>
-                          <% } %>
-                      </a>
-
-                    </li>
-                    <li class="d-inline-block d-md-none ml-md-0"><a href="#"
-                        class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
-
-                  </ul>
-                </div>
-              </div>
-
+            <div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
+              <form action="" class="site-block-top-search">
+                <span class="icon icon-search2"></span>
+                <input type="text" class="form-control border-0" placeholder="Search">
+              </form>
             </div>
+
+            <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
+              <div class="site-logo">
+                <a href="/index" class="js-logo-clone" style="text-decoration: none;">Wonder Shoes</a>
+              </div>
+            </div>
+
+            <div class="col-6 col-md-4 order-3 order-md-3 text-right">
+              <div class="site-top-icons">
+                <ul>
+
+                  <li><a href="/viewProfile" style="text-decoration: none;"><span class="icon icon-person"></li>
+                    <li>
+                      <a href="/viewWishlist" class="site-cart"  style="text-decoration: none;">
+                        <span class="icon icon-heart-o"></span>
+                      <% if (locals.countInWishlist) { %>
+                       <span class="count"><%= countInWishlist %> </span>
+                      <% } %>
+                      
+                      </a></li>
+                  <li>
+                    <a href="/viewCart" class="site-cart" style="text-decoration: none;">
+
+                      <span class="icon icon-shopping_cart"></span>
+                      <% if(locals.countInCart) {%>
+                        <span class="count">
+                          <%=countInCart%>
+                        </span>
+                        <% } %>
+                    </a>
+
+                  </li>
+                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span
+                        class="icon-menu"></span></a></li>
+
+                </ul>
+              </div>
+            </div>
+
           </div>
         </div>
-        <nav class="site-navigation text-right text-md-center" role="navigation">
-          <div class="container">
-            <ul class="site-menu js-clone-nav d-none d-md-block">
-              <li class="has-children active">
-                <a href="/index" style="text-decoration: none;">Home</a>
-              </li>
-              <li class="has-children">
-                <a href="/about" style="text-decoration: none;">About</a>
-              </li>
-              <li><a href="/shop" style="text-decoration: none;">Shop</a></li>
-              <li><a href="#" style="text-decoration: none;">My Orders</a></li>
-              <li><a href="/contact" style="text-decoration: none;">Contact Us</a></li>
-              <% if(customer){%>
-                <li><a href="/logout" style="text-decoration: none;">Logout</a></li>
-                <%}else{%>
-                  <li><a href="/login" style="text-decoration: none;">Login</a></li>
-                  <%}%>
-            </ul>
-          </div>
-        </nav>
-      </header>
+      </div>
+      <nav class="site-navigation text-right text-md-center" role="navigation">
+        <div class="container">
+          <ul class="site-menu js-clone-nav d-none d-md-block">
+            <li class="has-children active">
+              <a href="/index" style="text-decoration: none;">Home</a>
+            </li>
+            <li class="has-children">
+              <a href="/about" style="text-decoration: none;">About</a>
+            </li>
+            <li><a href="/shop" style="text-decoration: none;">Shop</a></li>
+            <li><a href="#" style="text-decoration: none;">My Orders</a></li>
+            <li><a href="/contact" style="text-decoration: none;">Contact Us</a></li>
+            <% if(customer){%>
+              <li><a href="/logout" style="text-decoration: none;">Logout</a></li>
+              <%}else{%>
+                <li><a href="/login" style="text-decoration: none;">Login</a></li>
+                <%}%>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
 
     <!-- breadcrumb-section -->
     <div class="breadcrumb-section breadcrumb-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 offset-lg-2 text-center">
-                    <div class="breadcrumb-text">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 offset-lg-2 text-center">
+            <div class="breadcrumb-text">
 
-                        <h1>Order details</h1>
-                    </div>
-                </div>
+              <h1>Order details</h1>
             </div>
+          </div>
         </div>
+      </div>
     </div>
     <!-- end breadcrumb section -->
 
     <!-- middle section -->
-    <div class="container">
-        <div class=" mt-100 mb-5 d-flex align-items-center justify-content-center">
-            <h3 class="text-decoration-underline">Order details</h3>
-        </div>
-        <table class="table table-success table-striped mb-100" id="table">
-            <thead>
-                <tr>
-                    <th scope="col">Order date</th>    
-                    <th scope="col">Payment method</th>
-                    <th scope="col">Payment status</th>
-                    <th scope="col">Order status</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Delivery date</th>
-                    <th scope="col">Controlls</th>
-    
-    
-                </tr>
-            </thead>
-            <tbody>
-                <% orderDetails.forEach((order)=>{ %>  
-                <tr>
-                    <td><%= order.orderDate %></td>  
-                    <td><%= order.paymentMethod %></td>
-                    <td><%= order.paymentStatus %></td>
-                    <td><%= order.orderStatus %></td>
-                    <td> <%= order.totalAmount %>  ₹ </td>
-                    <td><%= order.deliveryDate %></td>
-                    <td>
-                        
-                        <!-- Button trigger modal -->
-                        <% if(order.orderStatus=='placed' || order.orderStatus=='pending' || order.orderStatus=='Shipped' ){ %> 
-                     <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                     data-bs-target="#exampleModal-<%=order._id%>">
-                     Cancel
-                   </button>
-                      
-                        <% } %> 
-                   <!-- Modal -->
-                   <div class="modal fade  modal-centered" id="exampleModal-<%=order._id%>" tabindex="-1" 
-                     aria-labelledby="exampleModalLabel" >
-                     <div class="modal-dialog">
-                       <div class="modal-content">
-                         <div class="modal-header">
-                           <h1 class="modal-title fs-5" id="exampleModalLabel">Delete confirmation</h1>
-                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                         </div>
-                         <div class="modal-body">
-                           Are you sure you want to cancel this order ?
-                         </div>
-                         <div class="modal-footer">
-                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                           <a href="/cancelOrder/<%=order._id%>"><button type="button"
-                               class="btn btn-danger">Cancel</button></a>
-                         </div>
-                       </div>
-                     </div>
-                   </div>
-                        <a href="/orderedProduct/<%= order._id %>" class="btn btn-secondary">View</a>
-                        
-    
-                    </td>      
-                </tr>
-                <% }) %> 
-    
-       
-    
-            </tbody>
-        </table>
-    
-        </div>
-        </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
+    <div class="container  mb-5">
+      <table class="table table-success table-striped mb-100" id="table">
+        <thead>
+          <tr>
+            <th scope="col">Order date</th>
+            <th scope="col">Payment method</th>
+            <th scope="col">Payment status</th>
+            <th scope="col">Order status</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Delivery date</th>
+            <th scope="col">Controlls</th>
+
+
+          </tr>
+        </thead>
+        <tbody>
+          <% orderDetails.forEach((order)=>{ %>
+            <tr>
+              <td>
+                <%= order.orderDate %>
+              </td>
+              <td>
+                <%= order.paymentMethod %>
+              </td>
+              <td>
+                <%= order.paymentStatus %>
+              </td>
+              <td>
+                <%= order.orderStatus %>
+              </td>
+              <td>
+                <%= order.totalAmount %> ₹
+              </td>
+              <td>
+                <%= order.deliveryDate %>
+              </td>
+              <td>
+
+                <!-- Button trigger modal -->
+                <% if(order.orderStatus=='placed' || order.orderStatus=='pending' || order.orderStatus=='Shipped' ){ %>
+                  <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal-<%=order._id%>">
+                    Cancel
+                  </button>
+
+                  <% } %>
+                    <!-- Modal -->
+                    <div class="modal fade  modal-centered" id="exampleModal-<%=order._id%>" tabindex="-1"
+                      aria-labelledby="exampleModalLabel">
+                      <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Delete confirmation</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            Are you sure you want to cancel this order ?
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <a href="/cancelOrder/<%=order._id%>"><button type="button"
+                                class="btn btn-danger">Cancel</button></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <a href="/orderedProduct/<%= order._id %>" class="btn btn-secondary">View</a>
+
+
+              </td>
+            </tr>
+            <% }) %>
+
+
+
+        </tbody>
+      </table>
+
     </div>
-    
-    <!-- end middle section -->
-    <!-- footer -->
-    <%- include('../partials/footer')%>
+  </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"></script>
+  </div>
+
+  <!-- end middle section -->
+  <!-- footer -->
+  <%- include('../partials/footer')%>
