some bugs fixed

--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -1,4 +1,8 @@
 
 <%- include("../partials/adminHeader.ejs")%>
-
+<div class="row">
+<div class="text-center">
+<img src="/adminImages/adminhome.jpg" class="img-fluid rounded mx-auto d-block" alt="" style="width: fit-content;" srcset="">
+</div>
+</div>
 <%- include("../partials/footer.ejs")%>
