--- a/views/admin/productDetails.ejs
+++ b/views/admin/productDetails.ejs
@@ -98,7 +98,7 @@
                  <%=products.price%>
                 </td>
                 <td>
-                  <%=products.category%>
+                  <%=products.category.category_name%>
                 </td>
                 <td>
                   <%=products.description%>
