--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -1,7 +1,5 @@
 <%- include ("../partials/adminHeader") %> 
-  <div class="container-fluid">
-    <div class="row flex-nowrap">
-    
+
       <div class="col py-3">
 
         <div class="container mt-5 w-50 border ">
@@ -14,14 +12,14 @@
                 class="form-control" />
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input type="text" required placeholder="Price" name="price" id="price" class="form-control" />
+              <input type="text" required placeholder="Price" name="price" id="price" class="form-control" required>
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
               
-              <select required class="form-select " name="category" id="category"   aria-label="Default select example">
-                <option selected disabled >Category</option>
+              <select required  class="form-select required" name="category" id="category"   aria-label="Default select example">
+                <option selected value="" disabled="disabled" >Category</option>
                 <% category.forEach((categories)=> {%>
-                <option value="<%=categories.category_name%>" ><%=categories.category_name%></option>
+                <option value="<%=categories._id%>" ><%=categories.category_name%></option>
                 <% }) %>
                 
               </select>
@@ -44,6 +42,6 @@
         </div>
 
       </div>
-    </div>
-  </div>
-  <%- include("../partials/footer.ejs")%>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
