--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -6,10 +6,18 @@
         </div>
         
         <form action="/admin/addCategory" method="post" id="form" class="mt-5">
-          <input type="text" name="name" placeholder="Add new category">
+          <input type="text" name="name" placeholder="Add new category" required>
           <button type="submit" class="btn btn-success" >Submit</button>
         </form>
-            <small class="text-danger"><%=submitErr %></small>
+            <small class="text-danger"><%=categoryExist%></small>
+
+            <div class="d-flex align-items-center justify-content-center">
+              <% if(locals.editCategoryExist){%>
+                <p class="text-danger">
+                  <%=editCategoryExist%>
+                </p>
+                <% } %>
+            </div>
         <table class="table" id="table">
           <thead>
             <tr>
@@ -33,16 +41,26 @@
                   </td>
                   <td>
                     <form action="/admin/editCategory/<%=catg._id%>" method="post">
-                      <input placeholder="Edit category name" name="name" type="text" class="form-control w-50">
+                      <div class="d-flex">
+                      <input placeholder="Edit category name" name="name" type="text" id="category" class="form-control w-50"  required>                     
                       <button type="submit" class="btn btn-success">Submit</button>
+                      </div>
                     </form>
+                    
                 </td>
                 <td>
                    <!-- Button trigger modal -->
+                   <% if(catg.delete==false){ %>
                    <button type="button" class="btn btn-danger" data-bs-toggle="modal"
                    data-bs-target="#exampleModal-<%=catg._id%>">
                    Delete
                  </button>
+                 <% }else{ %>
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                  data-bs-target="#exampleModal-<%=catg._id%>">
+                  Restore
+                </button>
+                <% } %>
                  <!-- Modal -->
                  <div class="modal fade" id="exampleModal-<%=catg._id%>" tabindex="-1"
                    aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -52,10 +70,27 @@
                          <h1 class="modal-title fs-5" id="exampleModalLabel">Delete confirmation</h1>
                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                        </div>
+                       <% if(catg.delete==false){ %>
                        <div class="modal-body">
                          Are you sure you want to delete this category <%= catg.category_name%>?
                        </div>
+                       <% } else { %>
+                        <div class="modal-body">
+                          Are you sure you want to Restore this category <%= catg.category_name%>?
+                        </div>
+                        <% } %>
                        <div class="modal-footer">
+                        <% if (catg.delete==false) { %>
+                          <button type="button" class="btn btn-secondary"
+                          data-bs-dismiss="modal">Close</button>
+                          <a href="/admin/deleteCategory/<%=catg._id%>">
+                          <button type="button" class="btn btn-danger" >Delete</button></a>
+                          <% } else { %>
+                                <button type="button" class="btn btn-secondary"
+                                          data-bs-dismiss="modal">Close</button>
+                                        <a href="/admin/restoreCategory/<%=catg._id%>"><button type="button"
+                                            class="btn btn-primary">Restore</button></a>
+                                        <% } %>
                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                          <a href="/admin/deleteCategory/<%=catg._id%>"><button type="button"
                              class="btn btn-danger">Delete</button></a>
@@ -76,4 +111,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-    <%- include ("../partials/footer") %> 
