--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -33,7 +33,7 @@
         <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
           <h3 class="footer-heading mb-4">Promo</h3>
           <a href="#" class="block-6">
-            <img style="text-decoration:none;" src="/images/logo.png" alt="Image placeholder" class="img-fluid rounded mb-4">
+            <img style="text-decoration:none;width: 40%;height: 40%;" src="/images/logo.png" alt="Image placeholder" class="img-fluid rounded mb-4">
             <a class="font-weight-light  mb-0">Finding Your Perfect Shoes</h3>
             <p>Since &mdash;  2022</p>
           </a>
@@ -82,6 +82,7 @@
 <script src="http://localhost:3000/js/aos.js"></script>
 <script src="http://localhost:3000/js/ajaxrequests.js"></script>
 <script src="js/main.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 crossorigin="anonymous"></script>
@@ -100,10 +101,8 @@ $("#placeOrder").submit((e) => {
       }
     }
   })
-})
-</script>
-
-
+}) 
+ </script>
 </body>
 </html>
 
