--- a/views/user/productView.ejs
+++ b/views/user/productView.ejs
@@ -11,10 +11,12 @@
   for
   <div class="site-section">
     <div class="container">
+      
       <div class="row">
         <div class="col-md-6">
           <img src="/adminimages/<%=product._id%>.jpg" alt="Imageview" class="img-fluid">
         </div>
+
         <div class="col-md-6">
           <h2 class="text-black">
             <%=product.name%>
@@ -29,7 +31,7 @@
             <b>Select Size</b>
           <div class="mb-1 d-flex">
             <label for="option-sm" class="d-flex mr-3 mb-3">
-              <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-sm"
+              <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio"  id="option-sm"
                   name="shop-sizes"></span> <span class="d-inline-block text-black">6</span>
             </label>
             <label for="option-md" class="d-flex mr-3 mb-3">
@@ -49,26 +51,17 @@
                   name="shop-sizes"></span> <span class="d-inline-block text-black">10</span>
             </label>
           </div>
-          <div class="mb-5">
-            <div class="input-group mb-3" style="max-width: 120px;">
-              <div class="input-group-prepend">
-                <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-              </div>
-              <input type="text" class="form-control text-center" value="1" placeholder=""
-                aria-label="Example text with button addon" aria-describedby="button-addon1">
-              <div class="input-group-append">
-                <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-              </div>
-            </div>
+          
+    
 
-          </div>
           <div class="row">
             
-              <p><a  href="/cart/<%=product._id%>" class="buy-now btn btn-sm btn-primary ">Add To Cart</a></p>
+              <button><a  href="/cart/<%=product._id%>" class="buy-now btn btn-sm btn-primary ">Add To Cart</a></button>
               <p><a href="/wishlist/<%=product._id%>" class="icon icon-heart-o btn btn-link ml-2"><sub>+</sub></a></p>   
           </div>
         </div>
       </div>
+      
     </div>
   </div>
 
