--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -87,12 +87,11 @@
             <div class="border p-4 rounded mb-4">
               <h3 class="mb-3 h6 text-uppercase text-black d-block">Categories</h3>
               <ul class="list-unstyled mb-0">
-                <li class="mb-1"><a href="#" class="d-flex"><span>Men</span> <span
+                <% category.forEach((categories)=>{ %> 
+                <li class="mb-1"><a href="/category/<%=categories._id%>" class="d-flex"><span><%=categories.category_name %></span> <span
                       class="text-black ml-auto">(2,220)</span></a></li>
-                <li class="mb-1"><a href="#" class="d-flex"><span>Women</span> <span
-                      class="text-black ml-auto">(2,550)</span></a></li>
-                <li class="mb-1"><a href="#" class="d-flex"><span>Children</span> <span
-                      class="text-black ml-auto">(2,124)</span></a></li>
+                      <% }) %> 
+
               </ul>
             </div>
 
