--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -7,7 +7,6 @@
 		<div class="container">
 			<% if (locals.countInWishlist>0) { %>
 		  <div class="row mb-5">
-			<form class="col-md-12" method="post">
 			  <div class="site-blocks-table">
 				<table class="table ">
 				  <thead>
@@ -38,19 +37,23 @@
 					</tr>
 	
 					<% }) %>
-				  
+					
 				  </tbody>
 				</table>
 			  </div>
-			</form>
+			  <div d-flex >
+				<a class="btn btn-primary " href="/shop">Back to shop</a>
+				
+			  </div>
 		  </div>
 		  <% } else { %>
-			<h2 class="text-center text-danger">Oops!<br>
-				Your Cart is empty </h3>
-			  <div class=""><img src="/adminImages/emptyCart.png" class="img-fluid rounded mx-auto d-block mb-5" alt="image">
-			   
-			 
+			
+			  <div class=""><img src="/adminImages/wish.png" style="width:20%;height:20%;" class="img-fluid rounded mx-auto d-block mb-5" alt="image">
+				<h2 class="text-center text-black">Oops!<br>
+					Your Cart is empty </i><br>
+					<a class="btn btn-primary mt-5 mb-5" href="/shop">Back to shop</a>
 			  </div>
+			  
 		  <% } %>
 	   </div>
 		<!-- end wishlist -->
