admin order management

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -34,9 +34,9 @@
                     </td>
                     <td class="product-name">
                       <h2 class="h5 text-black"><%= product.productDetail.name %></h2>
-                    </td>
+                    </td>                    
                     <td><%= product.productDetail.price%> ₹</td>
-                    <td><%= product.productDetail.price%> ₹</td>
+                    <td><%= size%> </td>
                     <td  class="product-quantity">
                       <div class="input-group  " style="max-width: 120px; ">
                         
