--- a/views/partials/adminSidebar.ejs
+++ b/views/partials/adminSidebar.ejs
@@ -14,7 +14,7 @@
               </a>
             </li>
             <li>
-              <a href="admin/order" class="nav-link px-0 align-middle">
+              <a href="/admin/orders" class="nav-link px-0 align-middle">
                 <img src="/adminImages/order.jpg" alt="" style="width: 1rem" />
                 <span class="ms-1 d-none d-sm-inline">Order</span>
               </a>
