--- a/views/user/orderedProduct.ejs
+++ b/views/user/orderedProduct.ejs
@@ -23,8 +23,8 @@
         <tbody>
           <% productData.forEach((order)=>{ %>
             <tr>
-              <td><img style="height: 60px; width: 60px;" src="/adminimages/<%= order.productDetail._id %>.jpg"
-                  class="img-fluid" alt="" /></td>
+              <td><a href="/productview/<%= order.productDetail._id %>"><img style="height: 60px; width: 60px;" src="/adminimages/<%= order.productDetail._id %>.jpg"
+                  class="img-fluid" alt="" /></a></td>
               <td>
                 <%= order.productDetail.name %>
               </td>
@@ -151,42 +151,92 @@ padding-top: 15px;
                     <ul class="list-inline items d-flex justify-content-between">
                       <li class="list-inline-item items-list">
                         <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;"><%=orderDetails[0].orderStatus%></p
-                          class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
-                      </li>
-                      <li class="list-inline-item items-list">
-                     
-                      </li>
-                      <li class="list-inline-item items-list">
-                       
-                      </li>
-                      <li class="list-inline-item items-list text-end" >
-                        
-                      </li>
+                          class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">                    
+                         </li>                  
                     </ul>
   
                   </div>
-                  <% } else { %>
+                  <% } else if (orderDetails[0].orderStatus=="placed") { %>
+
                     <div class="horizontal-timeline">
               
                       <ul class="list-inline items d-flex justify-content-between">
                         <li class="list-inline-item items-list">
                           <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;"><%=orderDetails[0].orderStatus%></p
+                            class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">                    
+                           </li>                  
+                      </ul>
+    
+                    </div>
+                    <% } else if (orderDetails[0].orderStatus=="pending") { %>
+
+                      <div class="horizontal-timeline">
+                
+                        <ul class="list-inline items d-flex justify-content-between">
+                          <li class="list-inline-item items-list">
+                            <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;"><%=orderDetails[0].orderStatus%></p
+                              class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">                    
+                             </li>                  
+                        </ul>
+      
+                      </div>
+                    <% } else if (orderDetails[0].orderStatus=="shipped") { %>
+                    <div class="horizontal-timeline">
+              
+                      <ul class="list-inline items d-flex justify-content-between">
+                        <li class="list-inline-item items-list">
+                          <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">pending</p
                             class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
                         </li>
                         <li class="list-inline-item items-list">
                           <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">Shipped</p
                             class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
                         </li>
-                        <li class="list-inline-item items-list">
-                          <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">On the way
-                          </p>
-                        </li>
-                        <li class="list-inline-item items-list text-end" style="margin-right: 8px;">
-                          <p style="margin-right: -8px;">Delivered</p>
-                        </li>
+                       
                       </ul>
     
                     </div>
+                    <% } else if (orderDetails[0].orderStatus=="outForDelivery") { %>
+                      <div class="horizontal-timeline">
+                
+                        <ul class="list-inline items d-flex justify-content-between">
+                          <li class="list-inline-item items-list">
+                            <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">pending</p
+                              class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
+                          </li>
+                          <li class="list-inline-item items-list">
+                            <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">Shipped</p
+                              class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
+                          </li>
+                          <li class="list-inline-item items-list">
+                            <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">out For Delivery
+                            </p>
+                          </li>
+                        </ul>
+      
+                      </div>
+                      <% } else{ %>
+                        <div class="horizontal-timeline">
+                
+                          <ul class="list-inline items d-flex justify-content-between">
+                            <li class="list-inline-item items-list">
+                              <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">pending</p
+                                class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
+                            </li>
+                            <li class="list-inline-item items-list">
+                              <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">Shipped</p
+                                class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">
+                            </li>
+                            <li class="list-inline-item items-list">
+                              <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">out For Delivery
+                              </p>
+                            </li>
+                            <li class="list-inline-item items-list text-end" style="margin-right: 8px;">
+                              <p style="margin-right: -8px;">Delivered</p>
+                            </li>
+                          </ul>
+        
+                        </div>
                   <% } %>
                 </div>
               </div>
