--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -91,9 +91,9 @@
                                         <a href="/admin/restoreCategory/<%=catg._id%>"><button type="button"
                                             class="btn btn-primary">Restore</button></a>
                                         <% } %>
-                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                         <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                          <a href="/admin/deleteCategory/<%=catg._id%>"><button type="button"
-                             class="btn btn-danger">Delete</button></a>
+                             class="btn btn-danger">Delete</button></a> -->
                        </div>
                      </div>
                    </div>
