--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -32,6 +32,12 @@
               </a>
             </li>
             <li>
+              <a href="/admin/coupon" class="nav-link px-0 align-middle">
+                <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
+                <span class="ms-1 d-none d-sm-inline">Coupon</span>
+              </a>
+            </li>
+            <li>
               <a href="/admin/category" class="nav-link px-0 align-middle">
                 <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
                 <span class="ms-1 d-none d-sm-inline">category</span>
