--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -13,11 +13,16 @@
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <style>
+      body{
+        font-family: "Mukta", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        color: rgb(64, 106, 92);
+      }
+     </style>
 </head>
 
 <body>
-
+ 
 
   <div class="site-wrap">
     <header class="site-navbar" role="banner">
@@ -97,20 +102,20 @@
 
 
     <!-- breadcrumb-section -->
-    <div class="breadcrumb-section breadcrumb-bg">
+    <div class="breadcrumb-section breadcrumb-bg mt-4">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 offset-lg-2 text-center">
             <div class="breadcrumb-text">
 
-              <h1>Order details</h1>
+              <h2>order details</h3><hr>
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- end breadcrumb section -->
-
+   <% if (orderDetails) { %>
     <!-- middle section -->
     <div class="container  mb-5">
       <table class="table table-success table-striped mb-100" id="table">
@@ -191,6 +196,9 @@
       </table>
 
     </div>
+    <% } else { %>
+      <h1>empty</h1>
+    <% } %>
   </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
