--- a/views/user/orderedProduct.ejs
+++ b/views/user/orderedProduct.ejs
@@ -196,7 +196,7 @@ padding-top: 15px;
                       </ul>
     
                     </div>
-                    <% } else if (orderDetails[0].orderStatus=="outForDelivery") { %>
+                    <% } else if (orderDetails[0].orderStatus=="out for Delivery") { %>
                       <div class="horizontal-timeline">
                 
                         <ul class="list-inline items d-flex justify-content-between">
